--- a/templates/skateparks.html.twig
+++ b/templates/skateparks.html.twig
@@ -10,30 +10,46 @@
 {% endblock metatitle %}
 
 {% block main %}
-    <main>
-        <img class="title" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skateparks">
-        <img class="title" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark">
-        <section>
+    <section class="">
+        <div id="ico">
+            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon"></div>
+        </div>
+        <div class="line"></div>
+        <div class="">
             <form>
-                <input type="search" name="q" placeholder="Rechercher">
-                <input type="submit" value="Lancer !">
-            </form>
-        </section>
-        <section class="section">
-            {% for skatepark in skateparks %}
-                <div class="card">
-                    <div class="card-text">
-                        <h1>{{ skatepark.title }}</h1>
-                        {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
-                            <h2>{{ skatepark.description}}</h2>
-                            <h3>{{ skatepark.town}}</h3>
-                            <h3>{{ skatepark.area}}</h3>
-                        {#             {% if skatepark.club %} #}
-                        {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                        {#                    {% endif %} #}
-                    </div>
+                <div id="divSearch">
+                    <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
+                    <div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div>
+                    {% block search %}{% endblock search %}
                 </div>
-            {% endfor %}
-        </section>
-    </main>
+            </form>
+        </div>
+        <div class="line"></div>
+    </section>
+    <section class="section">
+        <article class="book-detail">
+            <article class="">
+            </article>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </article>
+    </section>
+    <section class="section">
+        {% for skatepark in skateparks %}
+            <div class="card">
+                <div class="card-text">
+                    <h1>{{ skatepark.title }}</h1>
+                    {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
+                        <h2>{{ skatepark.description}}</h2>
+                        <h3>{{ skatepark.town}}</h3>
+                        <h3>{{ skatepark.area}}</h3>
+                    {#             {% if skatepark.club %} #}
+                    {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
+                    {#                    {% endif %} #}
+                </div>
+            </div>
+        {% endfor %}
+    </section>
 {% endblock main%}
