--- a/templates/club.html.twig
+++ b/templates/club.html.twig
@@ -46,7 +46,7 @@
                             </b><br />
                         </div>
                         <div id="sta1" class="static">
-                            <b><img class="" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map">
+                            <b><img class="img-card" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map">
                             </b><br />
                         </div>
                     </div>
