--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -25,10 +25,13 @@
                 </div>
             </form>
         </div>
-        <div class="line"></div>
+        <div class="line">
+        </div>
     </section>
     <section class="section">
         <article class="book-detail">
+            <article class="">
+            </article>
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -36,6 +39,10 @@
                 {#        <div class="book-image">#}
                 {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
                 {#        </div>#}
+        </article>
+    </section>
+    <section class="section">
+        <article>
             <div class="card-text">
                 <h1>{{ shop.title }}</h1><br>
                 <h3>{{ shop.description }}</h3><br>
