--- a/templates/clubs.html.twig
+++ b/templates/clubs.html.twig
@@ -26,7 +26,8 @@
                 </div>
             </form>
         </div>
-        <div class="line"></div>
+        <div class="line">
+        </div>
     </section>
     <section class="section">
         <article class="book-detail">
