--- a/templates/shops.html.twig
+++ b/templates/shops.html.twig
@@ -50,6 +50,8 @@
                         {#         <h3>{{ shop.skatepark.town }} {{ shop.skatepark.area }}</h3> #}
                         {#     {% endif %} #}
                     </div>
+                    <a class="link" href="{{ path('shop', {"id": shop.id}) }}">Voir le shop</a>
+                    <a class="link" href="{{ path('shop_delete', {"id": shop.id}) }}">Supprimer le shop</a>
                 </div>
             {% endfor %}
         </article>
